<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFCE9F"
    tools:context=".authenticate.LoginFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_logo_id"
            android:layout_width="237dp"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/equipment_rental_logo" />

        <ProgressBar
            android:id="@+id/login_progressBar"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="invisible" />

    </FrameLayout>

    <EditText
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:id="@+id/email_address_id"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@android:color/white"
        android:hint="Enter your email" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:id="@+id/password_id"
        android:layout_marginTop="28dp"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:hint="Enter your password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="SIGN IN" />


<!--    <TextView-->
<!--        android:layout_width="377dp"-->
<!--        android:layout_height="28dp"-->
<!--        android:id="@+id/sing_in_with_google_id"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:text="Sign in with google" />-->

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_sign_in_btn_id1"
        android:layout_width="377dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="If not registered, please sign up below"
        android:layout_marginTop="28dp"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_button_id"
        android:background="#FF9800"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="SIGN UP" />

    </LinearLayout>
</ScrollView>


</LinearLayout>